# bevy_inquire

./: Cargo.toml
examples/: basic.rs
src/: lib.rs  text_style_adapter.rs
