[package]
name = "bevy-inquire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
inquire = { version = "0.6.2", path = "../inquire/inquire", default-features = false, features = [ "crossterm" ] }
itertools = "0.12.1"
